--- a/Project.toml
+++ b/Project.toml
@@ -3,12 +3,15 @@ uuid = "7d14e7fa-22d3-5249-9a2a-f29604f9a34b"
 authors = ["Pablo San-Jose <lekand@gmail.com>"]
 
 [deps]
+IterativeSolvers = "42fd0dbc-a981-5370-80f2-aaf504508153"
+LinearMaps = "7a12625a-238d-50fd-b39a-03d52299707e"
+Pardiso = "46dd5b70-b6fb-5a00-ae2d-e8fea33afaf2"
+
+[compat]
+julia = "^1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
 test = ["Test"]
-
-[compat]
-julia = "^1"
