--- a/Project.toml
+++ b/Project.toml
@@ -4,8 +4,10 @@ authors = ["Pablo San-Jose <lekand@gmail.com>"]
 
 [deps]
 IterativeSolvers = "42fd0dbc-a981-5370-80f2-aaf504508153"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LinearMaps = "7a12625a-238d-50fd-b39a-03d52299707e"
 Pardiso = "46dd5b70-b6fb-5a00-ae2d-e8fea33afaf2"
+SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 
 [compat]
 julia = "^1"
