--- a/Project.toml
+++ b/Project.toml
@@ -3,13 +3,9 @@ uuid = "7d14e7fa-22d3-5249-9a2a-f29604f9a34b"
 authors = ["Pablo San-Jose <lekand@gmail.com>"]
 
 [deps]
-ArnoldiMethod = "ec485272-7323-5ecc-a04f-4719b315124d"
-Arpack = "7d9fca2a-8960-54d3-9f78-7d1dccf2cb97"
-IterativeSolvers = "42fd0dbc-a981-5370-80f2-aaf504508153"
-KrylovKit = "0b1a1467-8014-51b9-945f-bf0ae24f4b77"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LinearMaps = "7a12625a-238d-50fd-b39a-03d52299707e"
-Pardiso = "46dd5b70-b6fb-5a00-ae2d-e8fea33afaf2"
+Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 
 [compat]
